# sem13

./: .gitignore  CMakeLists.txt  README.md
data/: supplier_dataset.csv
include/: dataset.h  id3.h  tree_utils.h
py/: generate_results_table.py  plot_id3_tree.py
src/: dataset.cpp  id3.cpp  main.cpp  tree_utils.cpp
